--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+plugins {
+    id "java"
+    id "edu.wpi.first.GradleRIO" version "2023.2.1"
+    id "com.peterabeles.gversion" version "1.10"
+}
 
 
 sourceCompatibility = JavaVersion.VERSION_17
